// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sanitize HTML utility > rewrite default sanitize options > should filter style attribute 1`] = `
<div size="13px">
</div>
`;

exports[`Sanitize HTML utility > rewrite default sanitize options > should filter style tag 1`] = `""`;

exports[`Sanitize HTML utility > rewrite default sanitize options > should not sanitize form tag if form is allowed 1`] = `
<form action="/do_something">
  <button>
    do
  </button>
</form>
`;

exports[`Sanitize HTML utility > rewrite default sanitize options > should not sanitize property if it is passed in cssWhiteList 1`] = `
<style>
  h2 {
  color: red;
  position: fixed;
}
</style>
`;

exports[`Sanitize HTML utility > sanitize-utility should sanitize html 1`] = `<img src="a">`;

exports[`Sanitize HTML utility > transform should not sanitize html if needToSanitizeHtml is false 1`] = `
<img src="a"
     onerror="alert(1)"
>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > html in markdown > should sanitize danger attributes 1`] = `<img src="a">`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > html in markdown > should sanitize danger properties in style tag 1`] = `
<style>
  h2 {
  color: red;
}
</style>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > html in markdown > should sanitize danger style attributes 1`] = `
<div style="font-size:14px">
</div>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > html in markdown > should sanitize form tag 1`] = `
<button>
  do
</button>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > plugin markdown-it-attrs > should not sanitize safe attributes 1`] = `
<p class="style-me"
   data-toggle="modal"
>
  Click
</p>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > plugin markdown-it-attrs > should sanitize danger attributes 1`] = `
<p>
  Click
</p>
`;

exports[`Sanitize HTML utility > transform should sanitize html by default l > plugin markdown-it-attrs > should sanitize danger style attributes 1`] = `
<p>
  <a href="https://example.com"
     style="width:100%;height:100%;background-color:red"
  >
    example.com
  </a>
</p>
`;

exports[`Sanitize HTML utility > transform should't sanitize css with disableStyleSanitizer=true option > html in markdown > should sanitize danger properties in style tag 1`] = `
<style>
  h2 {color: red; position:fixed;}
</style>
`;

exports[`Sanitize HTML utility > transform should't sanitize css with disableStyleSanitizer=true option > html in markdown > should sanitize danger style attributes 1`] = `
<div style="position:fixed;font-size:14px">
</div>
`;

exports[`Sanitize HTML utility > transform should't sanitize css with disableStyleSanitizer=true option > plugin markdown-it-attrs > should sanitize danger style attributes 1`] = `
<p>
  <a href="https://example.com"
     style="position:fixed;top:0;left:0;width:100%;height:100%;background-color:red;opacity:0.5"
  >
    example.com
  </a>
</p>
`;
